--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 Options +FollowSymlinks
 RewriteEngine On
-RewriteRule	^profil	View/profil.php	[L]
+#RewriteRule	^profil	View/profil.php	[L]
+RewriteRule	^profil/([A-Za-z0-9-]+)/?$	View/profil.php?id=$1	[L]
