--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,4 @@ Options +FollowSymlinks
 RewriteEngine On
 #RewriteRule	^profil	View/profil.php	[L]
 RewriteRule	^profil/([A-Za-z0-9-]+)/?$	View/profil.php?id=$1	[L]
+php_flag display_errors off
